--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,13 +5,14 @@ body {
   padding: 0%;
   margin: 0%;
   font-family: Arial, Helvetica, sans-serif;
+  background: grey;
 }
 
 nav {
   margin: 0;
   width: 100%;
   height: 80px;
-  background-color: black;
+  background-color: dimgrey;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,6 +87,7 @@ textarea {
 }
 
 .post {
+  margin: 10px;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
